# getagentid

./: .gitignore  KNOWN_ISSUES.md  README.md  agentid.json
agents/gmail-budget/: .env.example  agent.py  hub.py  requirements.txt
agents/gmail-budget/src/: db.py  gmail.py  parser.py
api/: .env.example  main.py  requirements.txt
api/src/: config.py  database.py
api/src/crypto/: keys.py
api/src/models/: agent.py
api/src/routes/: a2a.py  agents.py
api/src/services/: agent_service.py
api/tests/: test_a2a.py
blockchain/: README.md
blockchain/solana/: __init__.py  config.py  registry.py
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/public/.well-known/: agent-trust.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/.well-known/agentid.json/: route.ts
dashboard/src/app/.well-known/jwks.json/: route.ts
dashboard/src/app/admin/: page.tsx
dashboard/src/app/api/v1/: route.ts
dashboard/src/app/blog/: page.tsx
dashboard/src/app/cross-tests/: page.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/dashboard/audit/: page.tsx
dashboard/src/app/dashboard/connections/: page.tsx
dashboard/src/app/dashboard/fleet/: page.tsx
dashboard/src/app/dashboard/keys/: page.tsx
dashboard/src/app/dashboard/reports/: page.tsx
dashboard/src/app/docs/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/registry/: page.tsx
dashboard/src/app/reset-password/: page.tsx
dashboard/src/app/setup/: page.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/app/terms/: page.tsx
dashboard/src/components/: ActivityFeed.tsx  AgentPassport.tsx  Nav.tsx  Scene3D.tsx  StatsPanel.tsx
dashboard/src/lib/: agent-spending.ts  api-auth.ts  behaviour.ts  merkle.ts  notify.ts  payment-security.ts  receipts.ts  supabase.ts  trust-levels.ts  usage.ts  webhooks.ts
dashboard/supabase/migrations/: 20260326_solana_wallet_and_receipts.sql
examples/openai-agents-sdk/: README.md  agent_identity_guardrail.py  tool_guardrail.py
examples/qntm-encrypted-chat/: README.md  demo.py  requirements.txt
integrations/browser-use/: README.md  __init__.py  agentid_trust_provider.py  policy_engine.py  pyproject.toml
integrations/browser-use/tests/: conftest.py  test_trust_provider.py
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/agentid_crewai/: __init__.py  client.py  tools.py
integrations/crewai/tests/: conftest.py  test_tools.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/agentid_langchain/: __init__.py  toolkit.py  tools.py
integrations/langchain/tests/: test_tools.py
integrations/mcp/: README.md  package.json
integrations/mcp/src/: agentid-client.ts  index.ts
integrations/solana-agent-kit/: README.md  package-lock.json  package.json
integrations/solana-agent-kit/src/: index.ts
integrations/solana-agent-kit/tests/: test.ts
integrations/wg-integration/: README.md  runtime_verifier.py  runtime_verifier.ts  test_cross_runtime.py  test_trust_levels.py
marketing/: demo-commands.md  demo-script.md
scripts/: cross-module-interop.py  did-interop-test.py  relay-handoff-demo.py  relay-subscribe.py  relay-test.py
sdk/node/: package.json
sdk/python/: setup.py
sdk/python/agentid/: __init__.py  agent_wallet.py  aps_bridge.py  challenge.py  client.py  crypto.py  crypto_payments.py  daemon.py  did.py  ed25519.py  qntm_bridge.py  spending.py  trust_levels.py  wallet.py
sdk/python/tests/: test_aps_bridge.py  test_did.py  test_qntm_bridge.py
specs/: a2a-agent-card-mapping-v1.0.md  agent-trust-score-header-v0.1.md  agentid-proof-spec-v0.1.md  test-vectors-constraints.json  trust-level-constraints-v0.1.md  trust-levels-v1.0.md
tests/: cross_test_aps.py  cross_test_report.json  multi_attestation_chain_report.json  proof_report.json  proof_report_advanced.json  proof_runner.py  proof_runner_advanced.py
(+41 files in other folders)
