[project]
name = "agentid-trust-provider"
description = "AgentID TrustProvider integration for browser-use — trust verification for AI browser agents"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AgentID", email = "hello@getagentid.dev" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Security",
	"Topic :: Internet :: WWW/HTTP",
]
dependencies = [
	"httpx>=0.25.0",
	"pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://getagentid.dev"
Documentation = "https://getagentid.dev/docs/trust-protocol"
Repository = "https://github.com/getagentid/getagentid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
indent-width = 4
line-length = 120
