[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentid-crewai"
version = "0.1.0"
description = "AgentID tools for CrewAI — register, verify, discover, and connect AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
authors = [
    {name = "AgentID", email = "haroldmalikfrimpong@gmail.com"},
]
keywords = ["agentid", "crewai", "ai-agents", "identity", "verification", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "crewai>=0.80.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://getagentid.dev"
Documentation = "https://getagentid.dev/docs"
Repository = "https://github.com/haroldmalikfrimpong-ops/getagentid"
Issues = "https://github.com/haroldmalikfrimpong-ops/getagentid/issues"

[tool.setuptools.packages.find]
include = ["agentid_crewai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
